--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap" rel="stylesheet">
   
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500" rel="stylesheet">
+
+  <link href="https://oscarjll.github.io/oscarlyonsrepo/home.css" rel="stylesheet">
   
   <title>Oscar Lyons</title>
     
